--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.2.0",
     "react-is": "^19.2.3",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.12.0",
     "recharts": "^3.5.1",
     "tailwindcss": "^4.1.18"
   },
